--- a/back/package.json
+++ b/back/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
-  },
+  "start": "node index.js",
+  "dev": "nodemon index.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
